--- a/gallery1.html
+++ b/gallery1.html
@@ -58,77 +58,127 @@
             <div class="gallery-container2">
                 <div class="megafolio-container2">
 
-                    <div class="mega-entry" data-src="images/gallery/small_1.jpg" data-width="600" data-height="450">
+                    <div class="mega-entry" data-src="images/gallery/1/small_1.jpg" data-width="600" data-height="450">
                         <div class="mega-hover">
-                            <a class="fancybox" href="images/gallery/large_1.jpg">
+                            <a class="fancybox" href="images/gallery/1/large_1.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/1/small_2.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/1/large_2.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/1/small_3.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/1/large_3.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/1/small_4.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/1/large_4.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/1/small_5.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/1/large_5.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/1/small_6.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/1/large_6.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/1/small_7.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/1/large_7.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/1/small_8.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/1/large_8.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/1/small_9.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/1/large_9.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/1/small_10.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/1/large_10.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/1/small_11.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/1/large_11.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/1/small_12.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/1/large_12.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/1/small_13.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/1/large_13.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/1/small_14.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/1/large_14.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/1/small_15.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/1/large_15.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/1/small_16.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/1/large_16.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/1/small_17.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/1/large_17.jpg">
                              <div class="mega-hoverview"></div>
                             </a>
                         </div>
                     </div>
 
-                    <div class="mega-entry" data-src="images/gallery/1.jpg" data-width="600" data-height="450">
-                        <div class="mega-hover">
-                            <a class="fancybox" href="images/gallery/img_bg_3.jpg">
-                             <div class="mega-hoverview"></div>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="mega-entry" data-src="images/gallery/1.jpg" data-width="600" data-height="450">
-                        <div class="mega-hover">
-                            <a class="fancybox" href="images/gallery/img_bg_3.jpg">
-                             <div class="mega-hoverview"></div>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="mega-entry" data-src="images/gallery/1.jpg" data-width="600" data-height="450">
-                        <div class="mega-hover">
-                            <a class="fancybox" href="images/gallery/img_bg_3.jpg">
-                             <div class="mega-hoverview"></div>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="mega-entry" data-src="images/gallery/1.jpg" data-width="600" data-height="450">
-                        <div class="mega-hover">
-                            <a class="fancybox" href="images/gallery/img_bg_3.jpg">
-                             <div class="mega-hoverview"></div>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="mega-entry" data-src="images/gallery/1.jpg" data-width="600" data-height="450">
-                        <div class="mega-hover">
-                            <a class="fancybox" href="images/gallery/img_bg_3.jpg">
-                             <div class="mega-hoverview"></div>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="mega-entry" data-src="images/gallery/1.jpg" data-width="600" data-height="450">
-                        <div class="mega-hover">
-                            <a class="fancybox" href="images/gallery/img_bg_3.jpg">
-                             <div class="mega-hoverview"></div>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="mega-entry" data-src="images/gallery/1.jpg" data-width="600" data-height="450">
-                        <div class="mega-hover">
-                            <a class="fancybox" href="images/gallery/img_bg_3.jpg">
-                             <div class="mega-hoverview"></div>
-                            </a>
-                        </div>
-                    </div>
-
-                    <div class="mega-entry" data-src="images/gallery/1.jpg" data-width="600" data-height="450">
-                        <div class="mega-hover">
-                            <a class="fancybox" href="images/gallery/img_bg_3.jpg">
-                             <div class="mega-hoverview"></div>
-                            </a>
-                        </div>
-                    </div>
+                    
 
             
 
