--- a/index.html
+++ b/index.html
@@ -359,10 +359,10 @@
 						</a>
 					</li>
 					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
-						<a href="#" class="color-2">
+						<a href="gallery0.html">
 							<div class="case-studies-summary">
-								<span>30 Photos</span>
-								<h2>Timer starts now!</h2>
+								<span>17 Photos</span>
+								<h2>西溪湿地婚礼!</h2>
 							</div>
 						</a>
 					</li>
