--- a/index.html
+++ b/index.html
@@ -350,19 +350,19 @@
 				<div class="col-md-12">
 					<ul id="fh5co-gallery-list">
 						
-						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-1.jpg); "> 
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery/0/large_5.jpg); "> 
 						<a href="gallery0.html">
 							<div class="case-studies-summary">
-								<span>14 Photos</span>
-								<h2>Two Glas of Juice</h2>
+								<span>16 Photos</span>
+								<h2>婚纱照</h2>
 							</div>
 						</a>
 					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-2.jpg); ">
-						<a href="gallery0.html">
+					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery/1/large_5.jpg); ">
+						<a href="gallery1.html">
 							<div class="case-studies-summary">
 								<span>17 Photos</span>
-								<h2>西溪湿地婚礼!</h2>
+								<h2>西溪湿地婚礼</h2>
 							</div>
 						</a>
 					</li>
@@ -372,7 +372,7 @@
 						<a href="#" class="color-3">
 							<div class="case-studies-summary">
 								<span>90 Photos</span>
-								<h2>Beautiful sunset</h2>
+								<h2>马尔代夫蜜月</h2>
 							</div>
 						</a>
 					</li>
