--- a/gallery0.html
+++ b/gallery0.html
@@ -6,7 +6,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Wedding Bliss - a Unique HTML Template For Your Wedding Celebration</title>
+    <title>程&amp;柒</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimum-scale=1">
 
@@ -58,78 +58,118 @@
             <div class="gallery-container2">
                 <div class="megafolio-container2">
 
-                    <div class="mega-entry" data-src="images/gallery/small_1.jpg" data-width="600" data-height="450">
+                    <div class="mega-entry" data-src="images/gallery/0/small_1.jpg" data-width="600" data-height="450">
                         <div class="mega-hover">
-                            <a class="fancybox" href="images/gallery/large_1.jpg">
+                            <a class="fancybox" href="images/gallery/0/large_1.jpg">
                              <div class="mega-hoverview"></div>
                             </a>
                         </div>
                     </div>
-
-                    <div class="mega-entry" data-src="images/gallery/1.jpg" data-width="600" data-height="450">
+                    <div class="mega-entry" data-src="images/gallery/0/small_2.jpg" data-width="600" data-height="450">
                         <div class="mega-hover">
-                            <a class="fancybox" href="images/gallery/img_bg_3.jpg">
+                            <a class="fancybox" href="images/gallery/0/large_2.jpg">
                              <div class="mega-hoverview"></div>
                             </a>
                         </div>
                     </div>
-
-                    <div class="mega-entry" data-src="images/gallery/1.jpg" data-width="600" data-height="450">
+                    <div class="mega-entry" data-src="images/gallery/0/small_3.jpg" data-width="600" data-height="450">
                         <div class="mega-hover">
-                            <a class="fancybox" href="images/gallery/img_bg_3.jpg">
+                            <a class="fancybox" href="images/gallery/0/large_3.jpg">
                              <div class="mega-hoverview"></div>
                             </a>
                         </div>
                     </div>
-
-                    <div class="mega-entry" data-src="images/gallery/1.jpg" data-width="600" data-height="450">
+                    <div class="mega-entry" data-src="images/gallery/0/small_4.jpg" data-width="600" data-height="450">
                         <div class="mega-hover">
-                            <a class="fancybox" href="images/gallery/img_bg_3.jpg">
+                            <a class="fancybox" href="images/gallery/0/large_4.jpg">
                              <div class="mega-hoverview"></div>
                             </a>
                         </div>
                     </div>
-
-                    <div class="mega-entry" data-src="images/gallery/1.jpg" data-width="600" data-height="450">
+                    <div class="mega-entry" data-src="images/gallery/0/small_5.jpg" data-width="600" data-height="450">
                         <div class="mega-hover">
-                            <a class="fancybox" href="images/gallery/img_bg_3.jpg">
+                            <a class="fancybox" href="images/gallery/0/large_5.jpg">
                              <div class="mega-hoverview"></div>
                             </a>
                         </div>
                     </div>
-
-                    <div class="mega-entry" data-src="images/gallery/1.jpg" data-width="600" data-height="450">
+                    <div class="mega-entry" data-src="images/gallery/0/small_6.jpg" data-width="600" data-height="450">
                         <div class="mega-hover">
-                            <a class="fancybox" href="images/gallery/img_bg_3.jpg">
+                            <a class="fancybox" href="images/gallery/0/large_6.jpg">
                              <div class="mega-hoverview"></div>
                             </a>
                         </div>
                     </div>
-
-                    <div class="mega-entry" data-src="images/gallery/1.jpg" data-width="600" data-height="450">
+                    <div class="mega-entry" data-src="images/gallery/0/small_7.jpg" data-width="600" data-height="450">
                         <div class="mega-hover">
-                            <a class="fancybox" href="images/gallery/img_bg_3.jpg">
+                            <a class="fancybox" href="images/gallery/0/large_7.jpg">
                              <div class="mega-hoverview"></div>
                             </a>
                         </div>
                     </div>
-
-                    <div class="mega-entry" data-src="images/gallery/1.jpg" data-width="600" data-height="450">
+                    <div class="mega-entry" data-src="images/gallery/0/small_8.jpg" data-width="600" data-height="450">
                         <div class="mega-hover">
-                            <a class="fancybox" href="images/gallery/img_bg_3.jpg">
+                            <a class="fancybox" href="images/gallery/0/large_8.jpg">
                              <div class="mega-hoverview"></div>
                             </a>
                         </div>
                     </div>
-
-                    <div class="mega-entry" data-src="images/gallery/1.jpg" data-width="600" data-height="450">
+                    <div class="mega-entry" data-src="images/gallery/0/small_9.jpg" data-width="600" data-height="450">
                         <div class="mega-hover">
-                            <a class="fancybox" href="images/gallery/img_bg_3.jpg">
+                            <a class="fancybox" href="images/gallery/0/large_9.jpg">
                              <div class="mega-hoverview"></div>
                             </a>
                         </div>
                     </div>
-
+                    <div class="mega-entry" data-src="images/gallery/0/small_10.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/0/large_10.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/0/small_11.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/0/large_11.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/0/small_12.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/0/large_12.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/0/small_13.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/0/large_13.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/0/small_14.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/0/large_14.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/0/small_15.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/0/large_15.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="mega-entry" data-src="images/gallery/0/small_16.jpg" data-width="600" data-height="450">
+                        <div class="mega-hover">
+                            <a class="fancybox" href="images/gallery/0/large_16.jpg">
+                             <div class="mega-hoverview"></div>
+                            </a>
+                        </div>
+                    </div>
             
 
 
