--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading animate-box">
-					<h2>Hello!</h2>
-					<h3>November 28th, 2016 New York, USA</h3>
-					<p>We invited you to celebrate our wedding</p>
+					<h2>LOVE!</h2>
+					<!-- <h3>November 28th, 2016 New York, USA</h3>
+					<p>We invited you to celebrate our wedding</p> -->
 				</div>
 			</div>
 			<div class="couple-wrap animate-box">
@@ -129,7 +129,9 @@
 					</div>
 					<div class="desc-groom">
 						<h3 style="font-weight: bold;">关梦佳</h3>
-						<p>我来自浙江杭州，我是老师</p>
+						<p>她来自浙江杭州，她是老师</p>
+						<p>她说，我愿意！</p>
+						<p>她问，你愿意娶我吗？</p>
 					</div>
 				</div>
 				<p class="heart text-center"><i class="icon-heart2"></i></p>
@@ -139,7 +141,9 @@
 					</div>
 					<div class="desc-bride">
 						<h3 style="font-weight: bold;">张世程</h3>
-						<p>我来自山东德州，我是程序员</p>
+						<p>他来自山东德州，他是程序员</p>
+						<p>他问，你愿意嫁给我吗？</p>
+						<p>他说，我愿意！</p>
 					</div>
 				</div>
 			</div>
@@ -218,7 +222,7 @@
 									<span class="date">2017-11-20 星期一</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>从北京跳槽来到杭州，第二天我们就相识了，感谢积极的楠哥</p>
 								</div>
 							</div>
 						</li>
@@ -230,7 +234,7 @@
 									<span class="date">2017-11-26 星期日</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>一周之后，鼓起勇气相约见面，一起看电影，一起吃饭</p>
 								</div>
 							</div>
 						</li>
@@ -242,7 +246,7 @@
 									<span class="date">2017-12-14 星期四</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>凌晨零点，在微信上和熟睡的你表白了；当然，后面补了一个浪漫的表白</p>
 								</div>
 							</div>
 						</li>
@@ -254,7 +258,7 @@
 									<span class="date">2017-12-30 星期六</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>第一次旅行去了上海，在蜡像馆和最爱的胡歌合影</p>
 								</div>
 							</div>
 						</li>
@@ -266,7 +270,7 @@
 									<span class="date">2018-06-02 星期六</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>迪士尼好大，逛得好累，但是真的开心</p>
 								</div>
 							</div>
 						</li>
@@ -278,7 +282,7 @@
 									<span class="date">2018-12-14 星期五</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>我们领证了，在一起一周年的时候</p>
 								</div>
 							</div>
 						</li>
@@ -290,7 +294,7 @@
 									<span class="date">2019-10-04 星期五</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>在我老家山东的婚礼，忙碌着的一天</p>
 								</div>
 							</div>
 						</li>
@@ -302,7 +306,7 @@
 									<span class="date">2019-10-07 星期一</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>马尔代夫中央格兰德岛，风景真好</p>
 								</div>
 							</div>
 						</li>
@@ -314,7 +318,7 @@
 									<span class="date">2019-10-26 星期六</span>
 								</div>
 								<div class="timeline-body">
-									<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+									<p>在西溪湿地的婚礼，有点小雨，有点浪漫</p>
 								</div>
 							</div>
 						</li>
@@ -351,31 +355,29 @@
 					<ul id="fh5co-gallery-list">
 						
 						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery/0/large_5.jpg); "> 
-						<a href="gallery0.html">
-							<div class="case-studies-summary">
-								<span>16 Photos</span>
-								<h2>婚纱照</h2>
-							</div>
-						</a>
-					</li>
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery/1/large_5.jpg); ">
-						<a href="gallery1.html">
-							<div class="case-studies-summary">
-								<span>17 Photos</span>
-								<h2>西溪湿地婚礼</h2>
-							</div>
-						</a>
-					</li>
-
-
-					<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery-3.jpg); ">
-						<a href="#" class="color-3">
-							<div class="case-studies-summary">
-								<span>16 Photos</span>
-								<h2>马尔代夫蜜月</h2>
-							</div>
-						</a>
-					</li>
+							<a href="gallery0.html">
+								<div class="case-studies-summary">
+									<span>16 Photos</span>
+									<h2>婚纱照</h2>
+								</div>
+							</a>
+						</li>
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery/1/large_5.jpg); ">
+							<a href="gallery1.html">
+								<div class="case-studies-summary">
+									<span>17 Photos</span>
+									<h2>西溪湿地婚礼</h2>
+								</div>
+							</a>
+						</li>
+						<li class="one-third animate-box" data-animate-effect="fadeIn" style="background-image: url(images/gallery/2/large_12.jpg); ">
+							<a href="gallery2.html">
+								<div class="case-studies-summary">
+									<span>16 Photos</span>
+									<h2>马尔代夫蜜月</h2>
+								</div>
+							</a>
+						</li>
 					
 					</ul>		
 				</div>
